# voice-chat-desktop

./: .gitignore  README.md  bun.lockb  components.json  index.html  openapitools.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: main.tsx  router.tsx
src/app/layouts/: SidebarLayout.tsx
src/app/middlewares/: auth.middleware.ts
src/app/providers/: CentrifugeProvider.tsx
src/entities/notifications/ui/: NotificationItem.tsx  NotificationPopover.tsx  index.ts
src/entities/server/hooks/: index.ts  use-current-server-info.ts
src/entities/server/store/: index.ts  server.store.ts
src/features/: index.ts
src/features/authorization/hooks/: useAuthorization.tsx
src/features/authorization/model/: login-request-dto.model.ts
src/features/authorization/ui/: AuthorizationForm.tsx
src/features/create-new-server/: index.ts
src/features/create-new-server/hooks/: index.ts  useCreateServer.tsx
src/features/create-new-server/model/: create-server.model.ts  index.ts
src/features/create-new-server/ui/: create-new-server-modal.tsx  (+1 more)
src/pages/: index.ts
src/shared/: index.ts
src/shared/api/: client.ts  index.ts
src/shared/constants/: routes.constants.ts
src/shared/helpers/: index.ts  zod-schema-for.helper.ts
src/shared/lib/: index.ts  utils.ts
src/shared/styles/: index.ts  main.css
src/shared/ui/: avatar.tsx  button.tsx  dialog.tsx  error-boundary.tsx  form-controls.tsx  index.ts  skeleton.tsx  switch.tsx
src/widgets/: index.ts
(+77 files in other folders)
